feat(docker): update Python version to 3.13 and modify default command for interactive terminal
fix(main): update welcome message to reflect system name change to Actra

chore(requirements): ensure sentence-transformers, colorama, and rich are included in requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/app
-    command: ["python", "-m", "unittest", "discover", "-s", "tests"]
+    stdin_open: true  # Permite entrada estándar (necesario para terminal interactiva)
+    tty: true          # Asigna una terminal pseudo-TTY
